// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET a file Should list files in storage in root 1`] = `
Array [
  Object {
    "ContentLength": 17252,
    "ContentType": "image/jpeg",
    "ETag": null,
    "LastModified": null,
    "basename": "ice.jpg",
    "isDirectory": false,
    "path": "/ice.jpg",
  },
]
`;

exports[`GET a file Should list files in storage in sub folder 1`] = `
Array [
  Object {
    "ContentLength": 17252,
    "ContentType": "image/jpeg",
    "ETag": null,
    "LastModified": null,
    "basename": "ice.jpg",
    "isDirectory": false,
    "path": "/sub-folder/ice.jpg",
  },
]
`;

exports[`GET a file Should list files when policy allow \`key\` 1`] = `
Array [
  Object {
    "ContentLength": 17252,
    "ContentType": "image/jpeg",
    "ETag": null,
    "LastModified": null,
    "basename": "ice.jpg",
    "isDirectory": false,
    "path": "/sub-folder/ice.jpg",
  },
]
`;

exports[`GET a file Should list files when policy allow \`list\` action 1`] = `
Array [
  Object {
    "ContentLength": 17252,
    "ContentType": "image/jpeg",
    "ETag": null,
    "LastModified": null,
    "basename": "ice.jpg",
    "isDirectory": false,
    "path": "/sub-folder/ice.jpg",
  },
]
`;

exports[`GET a file Should list files when policy allow \`list\` action 2`] = `
Array [
  Object {
    "ContentLength": 17252,
    "ContentType": "image/jpeg",
    "ETag": null,
    "LastModified": null,
    "basename": "ice.jpg",
    "isDirectory": false,
    "path": "/sub-folder/ice.jpg",
  },
]
`;
